# python-tire-degradation

./: README.md  pyproject.toml
app/: main.py  retrieve_drivers.py  retrieve_lap_times.py  retrieve_race_data.py  retrieve_tire_types.py
app/cache/drivers/: drivers.json
app/cache/lap_times/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+17 more)
app/cache/timing/: data.txt
